--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </p>
         <p>
             Since these details are of crucial importance, I organize a contest every year to see who can correctly
-            predict the most of them. I weight each outcome based on its likelyhood -- according to the odds from the
+            predict the most of them. I weight each outcome based on its likelihood -- according to the odds from the
             sportsbook.
         </p>
         <p>
