remove sample table data

--- a/index.html
+++ b/index.html
@@ -44,22 +44,7 @@
                 </tr>
             </thead>
             <tbody id="participant-data">
-                <!-- Sample data -->
-                <!-- <tr>
-                    <th scope="row">1</th>
-                    <td>Tyler Auer</td>
-                    <td>3829</td>
-                    <td>34.2%</td>
-                    <td>50000</td>
-                </tr>
-                <tr>
-                    <td scope="row" colspan="5">
-                        <ul>
-                            <li>Red Gatorade</li>
-                            <li>Over 2:04</li>
-                        </ul>
-                    </td>
-                </tr> -->
+                <!-- participant data inseted here -->
             </tbody>
         </table>
     </div>
