rank now btn that shows/hides details row

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </tr>
             </thead>
             <tbody id="participant-data">
-                <!-- participant data inseted here -->
+                <!-- participant data inserted here -->
             </tbody>
         </table>
     </div>
