--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
         <p>
             Prizes are not necessary for a contest of this magnitude.
         </p>
-
-        <table class="table table-hover table-borderless">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">Rank</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Handle</th>
-                    <th scope="col">Score</th>
-                    <th scope="col" class="d-none d-sm-table-cell">% Correct</th>
-                </tr>
-            </thead>
-            <tbody id="participant-data">
-                <!-- participant data inserted here -->
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table class="table table-sm table-hover table-borderless">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Rank</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Handle</th>
+                        <th scope="col">Score</th>
+                    </tr>
+                </thead>
+                <tbody id="participant-data">
+                    <!-- participant data inserted here -->
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <!-- Optional JavaScript -->
