details shows picks and stats

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             Prizes are not necessary for a contest of this magnitude.
         </p>
         <div class="table-responsive">
-            <table class="table table-sm table-hover table-borderless">
+            <table class="table table-sm table-borderless">
                 <thead class="thead-dark">
                     <tr>
                         <th scope="col">Rank</th>
